<package>
  <name>pano_core</name>
  <version>2.3.1</version>
  <description>
      Library for the opencv-based panorama stitching algorithm
  </description>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/pano_core</url> 
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>
  <author email="erublee@dont.no">Ethan Rublee</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
</package>
